Add create and read handicraft

--- a/app/templates/handicraft/read.html
+++ b/app/templates/handicraft/read.html
@@ -2,8 +2,14 @@
 
 {% block content %}
     <section id="main-section">
-    {{ handicraft.name | safe}}
-    <br>
-    {{ handicraft.user.name | safe}}
+
+        <article>
+        <h1>Name: {{ handicraft.name }}</a></h1>
+        <h2>Category: {{ handicraft.category.name }}</h2>
+        <h3>Description: {{ handicraft.description }}</h3>
+        <br>
+        Created by: {{ handicraft.user.name }}
+        </article>
+
     </section>
 {% endblock %}
