--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,26 +18,29 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-default">
-        <div class="container">
-            <div class="navbar-header pull-left">
-                <a class="navbar-brand" href="/">
-                    The Handicrafter
-                </a>
-            </div>
-            <div class="navbar-header pull-right header-btn">
 
-            {% if session.username %}
-                <a role="button" class="btn navbar-btn btn-primary" href="{{url_for('auth.signout')}}">Sign out</a>
-                {{session.username | title}}
-                <img class="img-circle img-profile" src="{{session.picture}}">
-            {% else %}
-                <a role="button" class="btn navbar-btn btn-primary" href="{{url_for('auth.signin')}}">Sign in</a>
-            {% endif %}
+        <!-- Fixed navbar -->
+        <nav class="navbar navbar-default">
+            <div class="container">
+                <div class="navbar-header pull-left">
+                    <a class="navbar-brand" href="/">
+                        The Handicrafter
+                    </a>
+                </div>
+
+                <div class="navbar-header pull-right">
+
+                {% if session.username %}
+                    <a role="button" class="btn navbar-btn btn-primary" href="{{url_for('auth.signout')}}">Sign out</a>
+                    {{session.username | title}}
+                    <img class="img-circle img-profile" src="{{session.picture}}">
+                {% else %}
+                    <a role="button" class="btn navbar-btn btn-primary" href="{{url_for('auth.signin')}}">Sign in</a>
+                {% endif %}
+                </div>
+
             </div>
-        </div>
-    </nav>
+        </nav>
     <div class="container">
         <!-- The Flash -->
         {% with messages = get_flashed_messages() %}
@@ -52,6 +55,11 @@
                 </div>
             {% endif %}
         {% endwith %}
+
+
+        {% if session.username %}
+        <a role="button" class="btn navbar-btn btn-primary" href="{{url_for('handicraft.create_handicraft')}}">Create new handicraft</a>
+        {% endif %}
 
         {% block content %}
         {% endblock %}
