Add update and create controllers

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -39,3 +39,9 @@ body {
     /* custom width */
     width:320px;
 }
+
+textarea {
+    height: 100px; 
+    min-height: 100px;  
+    max-height: 100px;
+}
