--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
     <title>The Handicrafter</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:400" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
