Add %block% named title to handicraft base template.

--- a/app/templates/handicraft/create.html
+++ b/app/templates/handicraft/create.html
@@ -1,5 +1,9 @@
 {% extends "handicraft/base.html" %}
 
+{% block title %}
+        <h2 class="text-center">New Handicraft</h2>
+{% endblock %}
+
 {% block buttons %}
         <button type="submit" class="btn btn-primary">Save</button>
 {% endblock %}
