--- a/app/templates/handicraft/update.html
+++ b/app/templates/handicraft/update.html
@@ -1,6 +1,11 @@
 {% extends "handicraft/base.html" %}
 
+{% block title %}
+        <h2 class="text-center">Update Handicraft</h2>
+{% endblock %}
+
 {% block buttons %}
+
         <!-- Modal -->
         <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <div class="modal-dialog" role="document">
