--- a/app/templates/handicraft/base.html
+++ b/app/templates/handicraft/base.html
@@ -3,7 +3,8 @@
 {% block content %}
     <form class="form-group" method="post">
 
-        <h2 class="text-center">New Handicraft</h2>
+        {% block title %}
+        {% endblock %}
 
         <div class="form-group {% if error %}has-error{% endif %}">
             <label class="control-label" for="name">Name</label>
