Add edit button if user is the owner of a handicraft

--- a/app/templates/handicraft/read.html
+++ b/app/templates/handicraft/read.html
@@ -11,5 +11,9 @@
         Created by: {{ handicraft.user.name }}
         </article>
 
+        {% if ('user_id' in session) and (handicraft.user_id == session['user_id'] )%}
+        <a role="button" role="button" class="btn navbar-btn btn-primary" href="{{url_for('handicraft.update_handicraft', handicraft_id=handicraft.id)}}">Edit this</a>
+        {% endif %}
+
     </section>
 {% endblock %}
