Add Facebook and Google app id's as Flask constants, instead of fixed inside the javascript

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -7,6 +7,8 @@
     <script src="https://apis.google.com/js/api:client.js"></script>
     <script>
         var state = "{{state}}"
+        var google_client_id = "{{google_client_id}}"
+        var facebook_client_id = "{{facebook_client_id}}"
     </script>
 
     <div class="row row-centered">
