--- a/app/templates/home/front_page.html
+++ b/app/templates/home/front_page.html
@@ -39,6 +39,11 @@
                 {% if ('user_id' in session) and (handicraft.user_id == session['user_id'] )%}
                 <a role="button" role="button" class="btn navbar-btn btn-primary" href="{{url_for('handicraft.update_handicraft', handicraft_id=handicraft.id)}}">Edit this</a>
                 {% endif %}
+    
+                {% for picture in handicraft.pictures [1:] %}
+                <img class="img-responsive" src="{{url_for('handicraft.read_image', file_name=picture.file_name)}}">
+                <br />
+                {% endfor %}
                 <hr>
                 </article>
             {% endfor %}
