--- a/app/templates/handicraft/read.html
+++ b/app/templates/handicraft/read.html
@@ -15,5 +15,10 @@
         <a role="button" role="button" class="btn navbar-btn btn-primary" href="{{url_for('handicraft.update_handicraft', handicraft_id=handicraft.id)}}">Edit this</a>
         {% endif %}
 
+        {% for picture in handicraft.pictures %}
+        <img class="img-responsive" src="{{url_for('handicraft.read_image', file_name=picture.file_name)}}">
+        <br />
+        {% endfor %}        
+
     </section>
 {% endblock %}
