--- a/app/templates/handicraft/read.html
+++ b/app/templates/handicraft/read.html
@@ -15,7 +15,7 @@
         <a role="button" role="button" class="btn navbar-btn btn-primary" href="{{url_for('handicraft.update_handicraft', handicraft_id=handicraft.id)}}">Edit this</a>
         {% endif %}
 
-        {% for picture in handicraft.pictures %}
+        {% for picture in handicraft.pictures | sort(attribute='created_at', reverse=True)%}
         <img class="img-responsive" src="{{url_for('handicraft.read_image', file_name=picture.file_name)}}">
         <br />
         {% endfor %}        
