--- a/app/templates/handicraft/update.html
+++ b/app/templates/handicraft/update.html
@@ -43,9 +43,38 @@
 
     </form>
 
-    {% for picture in handicraft.pictures | sort(attribute='created_at', reverse=True)%}
+    <script type="text/javascript">
+        changeAction = function(obj){
+            $("#deletePictureForm").attr('action', $(obj).attr('handicraft-id'));
+        }
+    </script>
+
+    <form class="form-group" method="post" action="" id="deletePictureForm" enctype=multipart/form-data>
+        <input name=_csrf_token type=hidden value="{{ csrf_token() }}">
+        <!-- Delete Modal -->
+        <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="deleteModalLabel">Confirm operation</h4>
+                    </div>
+                    <div class="modal-body">
+                        Do you want to delete this picture ?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="submit" name="action" value="delete" class="btn btn-danger">Yes, delete it !</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+
+    {% for picture in handicraft.pictures | sort(attribute='created_at', reverse=True) %}
     <img class="img-responsive" src="{{url_for('handicraft.read_image', file_name=picture.file_name)}}">
-    <br />
+    <button type="button" onclick="changeAction(this)" handicraft-id="{{url_for('handicraft.delete_image', handicraft_id=handicraft.id, handicraft_picture_id=picture.id)}}" data-toggle="modal" data-target="#deleteModal" class="btn btn-danger">Delete picture</button>
+    <br /><br />
     {% endfor %}
 
 {% endblock %}
