--- a/app/templates/home/front_page.html
+++ b/app/templates/home/front_page.html
@@ -4,7 +4,7 @@
 
     <div class="row">
 
-        <div class="col-sm-3">
+        <div class="col-md-3 hidden-sm hidden-xs">
             <div class="panel panel-default">
                 <div class="panel-heading">Categories</div>
                 <div class="panel-body">
