--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,7 +25,7 @@
                     </a>
                 </div>
 
-                <div class="navbar-header pull-right">
+                <div class="pull-right">
 
                 {% if session.username %}
                     <a role="button" class="btn navbar-btn btn-default" href="{{url_for('handicraft.create_handicraft')}}"
